created a new folder
created a folder for images, downloaded an image and attached it to the website.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>
        Welcome to the Kitty City
     </h1>
+    <div>
+        <img src="images/striped-grey-kitten-768x512.jpg">
+    </div>
     <p>
         The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"</p>
     <p> he little kitty gets ready to pounce onto the nearby pile of fish.
