--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
     </div>
     <p>
         The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"</p>
+        <Div>
+            <img src="images/siberian-cat-water.webp">
+        </Div>
     <p> he little kitty gets ready to pounce onto the nearby pile of fish.
         The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. </p>
+        <div>
+            <img src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp">
+        </div>
     <p>the cat feel of the cliff and turned into a cat.rar</p>
+    <div>
+        <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg">
+    </div>
     <h3>THE END.</h3>
     
 </body>
