style inside HTML
added a style inside HTML for practice.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Story</title>
 </head>
-<body>
-    <h1>
+<body style="margin-left: 20px; background-color: rgb(185, 186, 173);">
+    <h1 style="font-size: 50px; color: rgb(38, 17, 96);">
        Welcome to the Kitty City
     </h1>
     <div>
