--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        Welcome to the Kitty City
     </h1>
     <div>
-        <img src="images/striped-grey-kitten-768x512.jpg">
+        <img src="images/striped-grey-kitten-768x512.jpg" alt="a Grey striped kitten is sitting">
     </div>
     <p>
         The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"</p>
