added "alt" to images, created CSS file
I added the "text to speech description to each image. I created a stylesheet file to move all the styling there. I changed the background of the "body".

--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Story</title>
+    <link href="style.css" rel="stylesheet">
+    <title>Random Kitty Story</title>
 </head>
-<body style="margin-left: 20px; background-color: rgb(185, 186, 173);">
-    <h1 style="font-size: 50px; color: rgb(38, 17, 96);">
+<body style="margin-left: 20px;">
+    <h1>
        Welcome to the Kitty City
     </h1>
-    <div>
+    <div class="image">
         <img src="images/striped-grey-kitten-768x512.jpg" alt="a Grey striped kitten is sitting">
     </div>
     <p>
         The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"</p>
-        <Div>
-            <img src="images/siberian-cat-water.webp">
+        <Div class="image">
+            <img src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
         </Div>
     <p> he little kitty gets ready to pounce onto the nearby pile of fish.
         The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. </p>
-        <div>
-            <img src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp">
+        <div class="image">
+            <img src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
         </div>
     <p>the cat feel of the cliff and turned into a cat.rar</p>
-    <div>
-        <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg">
+    <div class="image">
+        <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" alt="a tabby cat laying on the street">
     </div>
     <h3>THE END.</h3>
     
