--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
     <link href="style.css" rel="stylesheet">
     <title>Random Kitty Story</title>
 </head>
-<body style="margin-left: 20px;">
+<body>
+    <!-- the title of the story -->
     <h1>
        Welcome to the Kitty City
     </h1>
-    <div class="image">
-        <img src="images/striped-grey-kitten-768x512.jpg" alt="a Grey striped kitten is sitting">
+    <!-- first part -->
+    <div id="first-div">
+        <img src="images/striped-grey-kitten-768x512.jpg" id="rounded-img" alt="a Grey striped kitten is sitting">
+        <p>
+            The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"
+        </p>
+        <!-- second part -->
     </div>
-    <p>
-        The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"</p>
-        <Div class="image">
+        <Div class="green-bg">
             <img src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
+            <p> he little kitty gets ready to pounce onto the nearby pile of fish.
+                The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. 
+            </p>
+            <!-- third part -->
         </Div>
-    <p> he little kitty gets ready to pounce onto the nearby pile of fish.
-        The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. </p>
-        <div class="image">
+        <div class="green-bg">
             <img src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
+            <p>
+                the cat feel of the cliff and turned into a cat.rar
+            </p>
         </div>
-    <p>the cat feel of the cliff and turned into a cat.rar</p>
-    <div class="image">
+        <!-- the end -->
+    <div class="green-bg">
         <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" alt="a tabby cat laying on the street">
+        <h3>THE END.</h3>
     </div>
-    <h3>THE END.</h3>
     
 </body>
 </html>
