just changed styling
changed styling.

--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
        Welcome to the Kitty City
     </h1>
     <!-- first part -->
-    <div id="first-div">
-        <img src="images/striped-grey-kitten-768x512.jpg" id="rounded-img" alt="a Grey striped kitten is sitting">
+    <div id="first-div" class="container">
+        <img src="images/RvpM.gif" id="rounded-img" alt="a Grey striped kitten is sitting">
         <p>
             The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"
         </p>
-        <!-- second part -->
     </div>
-        <Div class="green-bg">
+    <!-- second part -->
+        <Div class="green-bg container" id="second-div">
             <img src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
             <p> he little kitty gets ready to pounce onto the nearby pile of fish.
                 The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. 
             </p>
-            <!-- third part -->
         </Div>
-        <div class="green-bg">
+        <!-- third part -->
+        <div class="green-bg container" id="third-div" >
             <img src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
             <p>
                 the cat feel of the cliff and turned into a cat.rar
             </p>
         </div>
         <!-- the end -->
-    <div class="green-bg">
-        <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" alt="a tabby cat laying on the street">
+    <div class="green-bg container" id="forth-div">
+        <!-- animated image -->
+        <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" id="m-kitty" alt="a tabby cat laying on the street">
         <h3>THE END.</h3>
     </div>
     
