styled a nav bar
added a navigation and styled it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Random Kitty Story</title>
 </head>
 <body>
+    <!-- navigation bar -->
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+        </ul>
+    </nav>
     <!-- the title of the story -->
     <h1>
        Welcome to the Kitty City
