--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
     <!-- navigation bar -->
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
+            <a href="./">
+                <li>Home</li>
+            </a>
+            <a href="./about/index.html">
+                <li>About</li>
+            </a>
         </ul>
     </nav>
+    <div id="nav-placeholder"></div>
     <!-- the title of the story -->
     <h1>
        Welcome to the Kitty City
