--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    This project was created to Bc CC / 
+        <!-- navigation bar -->
+        <nav>
+            <ul>
+                <a href="./index.html">
+                    <li>Home</li>
+                </a>
+                <a href="./about/index.html">
+                    <li>About</li>
+                </a>
+            </ul>
+        </nav>
+        <h1>
+            This project was created to Bc CC / CT&R Year 1 Unit a.
+        </h1>
 </body>
 </html>
