button styling, started mobile first
made a style for buttons in the nav menu. Added breakpoints.

--- a/about/index.html
+++ b/about/index.html
@@ -10,10 +10,10 @@
         <!-- navigation bar -->
         <nav>
             <ul>
-                <a href="./index.html">
+                <a href="./index.html" class="button">
                     <li>Home</li>
                 </a>
-                <a href="./about/index.html">
+                <a href="./about/index.html" class="button">
                     <li>About</li>
                 </a>
             </ul>
