--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- navigation bar -->
     <nav>
         <ul>
-            <a href="./">
+            <a href="./" class="button">
                 <li>Home</li>
             </a>
-            <a href="./about/index.html">
+            <a href="./about/index.html" class="button">
                 <li>About</li>
             </a>
         </ul>
@@ -25,21 +25,21 @@
     </h1>
     <!-- first part -->
     <div id="first-div" class="container">
-        <img src="images/RvpM.gif" id="rounded-img" alt="a Grey striped kitten is sitting">
+        <img class="resize" src="images/RvpM.gif" id="rounded-img" alt="a Grey striped kitten is sitting">
         <p>
             The big cat fall into the river and I saw a kitten riding a giant fish. The kitten and I loked eyes. It said "meow!"
         </p>
     </div>
     <!-- second part -->
         <Div class="green-bg container" id="second-div">
-            <img src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
+            <img class="resize" src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
             <p> he little kitty gets ready to pounce onto the nearby pile of fish.
                 The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. 
             </p>
         </Div>
         <!-- third part -->
         <div class="green-bg container" id="third-div" >
-            <img src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
+            <img class="resize" src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
             <p>
                 the cat feel of the cliff and turned into a cat.rar
             </p>
@@ -47,7 +47,7 @@
         <!-- the end -->
     <div class="green-bg container" id="forth-div">
         <!-- animated image -->
-        <img src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" id="m-kitty" alt="a tabby cat laying on the street">
+        <img id="m-kitty" class="resize" src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" alt="a tabby cat laying on the street">
         <h3>THE END.</h3>
     </div>
     
