breakpoints and styling
I added styling to the CSS. Changed sizes in every breakpoint, added margins and paddings. I fixed broken links and tested every element on every breakpoint. I think, I'm happy with the result.

--- a/about/index.html
+++ b/about/index.html
@@ -1,4 +1,4 @@
-!Doctype <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,19 +7,24 @@
     <title>Document</title>
 </head>
 <body>
-        <!-- navigation bar -->
-        <nav>
-            <ul>
-                <a href="./index.html" class="button">
-                    <li>Home</li>
-                </a>
-                <a href="./about/index.html" class="button">
-                    <li>About</li>
-                </a>
-            </ul>
-        </nav>
+    <!-- navigation bar -->
+    <nav>
+        <ul>
+            <a href="../index.html" class="button">
+                <li>Home</li>
+            </a>
+            <a href="../about/index.html" class="button">
+                <li>About</li>
+            </a>
+        </ul>
+    </nav>
+    <div class="container"></div>
         <h1>
             This project was created to Bc CC / CT&R Year 1 Unit a.
         </h1>
+        <div class="container">
+            <img id="meow" src="../images/cat in the office.jpg">
+        </div>
+    </div>
 </body>
 </html>
