--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- navigation bar -->
     <nav>
         <ul>
-            <a href="./" class="button">
+            <a href="./index.html" class="button">
                 <li>Home</li>
             </a>
             <a href="./about/index.html" class="button">
@@ -31,25 +31,23 @@
         </p>
     </div>
     <!-- second part -->
-        <Div class="green-bg container" id="second-div">
-            <img class="resize" src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
-            <p> he little kitty gets ready to pounce onto the nearby pile of fish.
-                The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. 
-            </p>
-        </Div>
-        <!-- third part -->
-        <div class="green-bg container" id="third-div" >
-            <img class="resize" src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
-            <p>
-                the cat feel of the cliff and turned into a cat.rar
-            </p>
-        </div>
+    <Div class="green-bg container" id="second-div">
+        <img class="resize" src="images/siberian-cat-water.webp" alt="A tabby cat is swimming in the river">
+        <p> he little kitty gets ready to pounce onto the nearby pile of fish.
+            The fish cried and asked for mercy.The cat however was ruthless and ate it! "you feral beast, how dare you gnow on grahan" I screamed and chased the cat far away. 
+        </p>
+    </Div>
+    <!-- third part -->
+    <div class="green-bg container" id="third-div" >
+        <img class="resize" src="images/cat-fish-eats-fresh-on-260nw-1449589049.webp" alt="A strey tabby kitten is eating a small fish">
+        <p>
+            the cat feel of the cliff and turned into a cat.rar
+        </p>
+    </div>
         <!-- the end -->
     <div class="green-bg container" id="forth-div">
         <!-- animated image -->
-        <img id="m-kitty" class="resize" src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" alt="a tabby cat laying on the street">
-        <h3>THE END.</h3>
-    </div>
-    
-</body>
+        <img id="m-kitty" class="resize" src="images/1000_F_448540754_GsR3B6AcpaFDKvBHWK5ZulVqD1RWSnWS.jpg" alt="a tabby cat laying on the street">    
+    </div>  
+    <div id="forth-div-extension"><h3>THE END.</h3> </div>
 </html>
